yoshimi 1.5.6 M

2018-3-4 Will.
* CLI direct access can now read VU levels.

2018-3-3 Will
* Quieted some unused code till it's developed.
* Small improvements to Add and Pad GUIs.

2018-3-2 Will
* Small change to shortcuts.
* Added entry point for dynamic subnote harmonic change.
  No idea how to actually change it though :(

2018-2-28 Will
* Implemented defaults for part author and copyright.
  Normal left button loads, Ctrl + left button saves.
* Implmented shortcuts for add, sub, pad editors.
  Left key - only if enabled.
  Right key - enables and opens.
  Individual voices not done yet.
* Implmented shortcuts for part kit and effects.

2018-2-26 Will
* Added missing attributions to previous commit :(
* Optimised part compute.
  Removed unnecessary memory clearing and made per-part
  temporary allocations general ones.
* Minor code cleanups.

2018-2-25 Will + Kristian
* Merged in effects interpolations from Kristian.
* Changed instrument name font to Helvetica (not bold).

2018-2-23 Will
* Reverted LV2 buffer size change pending investigation.
  was commit: cf7c6e746239e90069a599a966aecbd5ba4f9f6e
* Distortion and Alienwah limits now track preset number.
* Remaining effects limits now track preset number.

2018-2-21 Will
* Implemented note on/off test routines.

2018-2-18 Will
* BugFix: Dynfilter presets not updating GUI :(
* Small adjustment to 'Modular Sines'.
* Further refinements to Dynfilter limits.
* Changed all occurrences of p_buffer to sent_buffer.
  More descriptive and easier to follow in the code.

2018-2-16 Will
* Added 'Modular Sines' to Companion bank.
* Further adjustments to EQ effect controls.

2018-2-15 Will
* Minor tweaks to banks.

2018-2-13 Will
* BugFix: EQ GUI frequency wrongly zeroed.
* Phaser and EQ effect limits done.
* Some effect limits cleanups.
  (more work needed on CLI access)

2018-2-12 Will
* Alienwah and Dynfilter effect limits done.
  (not filter insert for dynfilter)