@@ -2,7 +2,7 @@
 version 1.0304
 header_name {.h}
 code_name {.cc}
-comment {Copyright 2016-2017, Will Godfrey
+comment {Copyright 2016-2018, Will Godfrey
 
 This file is part of yoshimi, which is free software: you can
 redistribute it and/or modify it under the terms of the GNU General
@@ -17,8 +17,8 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-Modified December 2017
-} {in_source in_header
+Modified March 2018
+} {selected in_source in_header
 }
 
 decl {using namespace std;} {public local
@@ -42,7 +42,7 @@ decl {\#include "BankUI.h"} {public local
 decl {\#include "ParametersUI.h"} {public local
 }
 
-class VectorUI {selected : {private MiscFuncs}
+class VectorUI {: {private MiscFuncs}
 } {
   Function {make_window(void)} {} {
     Fl_Window vectorwindow {
@@ -290,7 +290,7 @@ class VectorUI {selected : {private MiscFuncs}
         {
             Xcc = 0;
             send_data(96, 0, 0xf0, 192, 255, 255, BaseChan);
-            o->value(0);
+            //o->value(0);
             return;
         }
 
@@ -302,8 +302,7 @@ class VectorUI {selected : {private MiscFuncs}
         }
 
         Xcc =  tmp;
-        o->value(tmp);
-        send_data(16, o->value(), 0xd0);}
+        send_data(16, tmp, 0xd0);}
         tooltip {The MIDI CC this axis reponds to} xywh {110 85 50 20} labelfont 1 labelsize 12 minimum 0 maximum 119 value 0 textsize 12
         code0 {//
         o->value(Xcc);}
@@ -472,7 +471,7 @@ class VectorUI {selected : {private MiscFuncs}
         {
             Ycc = 0;
             send_data(32, 0xff, 0xd0);
-            o->value(0);
+            //o->value(0);
             return;
         }
 
@@ -484,8 +483,7 @@ class VectorUI {selected : {private MiscFuncs}
         }
 
         Ycc =  tmp;
-        o->value(tmp);
-        send_data(32, o->value(), 0xd0);}
+        send_data(32, tmp, 0xd0);}
         tooltip {The MIDI CC this axis reponds to} xywh {110 195 50 20} labelfont 1 labelsize 12 minimum 0 maximum 119 value 0 textsize 12 deactivate
         code0 {o->value(Ycc);}
       }
@@ -496,9 +494,9 @@ class VectorUI {selected : {private MiscFuncs}
         tmp = fl_input("Vector name:", loadlabel[BaseChan].c_str());
         if (tmp != NULL && !string(tmp).empty())
         {
-            o->copy_label(tmp);
-            loadlabel[BaseChan]  = string(tmp);
-            send_data(8, 0, 0xc0, 192, 255, 255, BaseChan, 128, miscMsgPush(string(tmp)));
+            //o->copy_label(tmp);
+            //loadlabel[BaseChan]  = string(tmp);
+            send_data(8, 0, 0xd0, 192, 255, 255, BaseChan, 128, miscMsgPush(string(tmp)));
         }}
         tooltip {Last saved or loaded vector file - click to change} xywh {45 265 198 20} box THIN_DOWN_BOX labelfont 1 labelsize 12
       }
@@ -538,19 +536,24 @@ class VectorUI {selected : {private MiscFuncs}
             }
             if (value_int < 14 || value_int > 119)
             {
-                Ycontrol->value(0);
+                Xcc = 0;
                 Ycc = 0;
-                Ygroup->deactivate();
-                Ycontrol->deactivate();
                 Xgroup->deactivate();
                 Xcontrol->value(0);
-                Xcc= 0;
+                Ycontrol->value(0);
+                Ygroup->deactivate();
+                Ycontrol->deactivate();
+                Xcontrol->redraw();
+                Ycontrol->redraw();
             }
             else
             {
                 Xgroup->activate();
-                Ycontrol->activate();
                 Xcontrol->value(value_int);
+                Xcontrol->redraw();
+                Ycontrol->activate();
+                Xcontrol->redraw();
+                Ycontrol->redraw();
             }
             break;
 
@@ -579,12 +582,14 @@ class VectorUI {selected : {private MiscFuncs}
             {
                 Ygroup->deactivate();
                 Ycontrol->value(0);
+                Ycontrol->redraw();
                 Ycc = 0;
             }
             else
             {
                 Ygroup->activate();
                 Ycontrol->value(value_int);
+                Ycontrol->redraw();
             }
             break;
 
